# rendera

./: .gitignore  .travis.yml  Makefile.am  Vagrantfile  build-o-matic.sh  configure.ac  install-dependencies.sh  install-fltk.sh
File/: File.cxx
Main/: Dialog.cxx  Main.cxx
src/: Algo.cxx  Bitmap.cxx  Blend.cxx  Crop.cxx  FX.cxx  File.cxx  Gui.cxx  Inline.H  Map.cxx  Math.cxx  Paint.cxx  Path.H  Path.cxx  Render.cxx  Stroke.cxx  Transform.cxx
test/: pathexe.C
